test/tests/compiler/8_loops/valid/break_immediate.plx
pub fn main(none) i32 {
    a: i32 = 10
    loop while (a = 1) {
        break
    }
    return a
}

