test/tests/compiler/8_loops/invalid_semantics/break_not_in_loop.plx
pub fn main(none) i32 {
    if 1 {
        break
    }
}
